@@ -5,12 +5,13 @@ import com.atarget.atargetbackend.timer.domain.TimeCounter;
 import com.atarget.atargetbackend.timer.repository.TimeCounterRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class GetAllTimeCountersService {
 
 	private final TimeCounterRepository timeCounterRepository;
@@ -21,6 +22,6 @@ public class GetAllTimeCountersService {
 
 		return allTimersCount.stream()
 		                     .map(GetTimeCounterResponse::from)
-		                     .collect(Collectors.toList());
+		                     .toList();
 	}
 }
